@@ -1,24 +1,0 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<test-data>
-    <test-code>
-        <description>
-        	<![CDATA[
-			Here, the user wants to ensure that there is no more than 2 HttpFilters in the all code.
-     		]]>
-     	</description>
-        <expected-problems>1</expected-problems>
-        <code><![CDATA[
-import javax.servlet.Filter;
-
-public class FooFilter implements Filter {
-	public FooFilter() { }
-
-	// Adding two private filter to emulate the others
-	private class BarFilter implements Filter {}
-
-	private class OneTooMuchFilter() implements Filter {}
-
-}
-     ]]></code>
-    </test-code>
-</test-data>
