@@ -7,10 +7,11 @@ Fixed other false positives in EmptyMethodInAbstractClassShouldBeAbstract
 
 New rules:
 	Controversial ruleset: DoNotCallGarbageCollectionExplicitly
-	Design ruleset : ReturnEmptyArrayRatherThanNull
+	Design ruleset : ReturnEmptyArrayRatherThanNull,TooFewBranchesForASwitchStatement,AbstractClassWithoutAnyMethod
 	Codesize : TooManyMethods
 	StrictExceptions : DoNotThrowExceptionInFinally
 	Strings : AvoidStringBufferField
+
 
 1.7 added as a valid option for targetjdk.
 New elements under <ruleset>: <exclude-pattern> to match files exclude from processing, with <include-pattern> to override.
